--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -21,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "json-server": "json-server --watch __json-server-mock__/db.json --port 3001"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,7 @@
     "@commitlint/config-conventional": "^17.4.2",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
+    "json-server": "^0.17.1",
     "lint-staged": "^13.1.0",
     "prettier": "2.8.3"
   },
