--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "json-server": "json-server --watch __json-server-mock__/db.json --port 3001"
+    "json-server": "json-server --watch ./__json-server-mock__/db.json -p 3001 -m ./__json-server-mock__/middleware.js"
   },
   "eslintConfig": {
     "extends": [
