--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "prettier": "2.8.3"
   },
   "lint-staged": {
-    "*.{js,css,md,ts,tsx}": "prettier --write"
+    "*.{js,css,md,ts,tsx,json}": "prettier --write"
   },
   "msw": {
     "workerDirectory": "public"
