--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@types/react-dom": "^18.0.10",
     "antd": "^5.1.7",
     "dayjs": "^1.11.7",
-    "jira-dev-tool": "^1.7.61",
+    "jira-dev-tool": "^1.6.59",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
