--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jira-dev-tool": "^1.6.59",
     "qs": "^6.11.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router": "^6.8.0",
@@ -57,6 +58,7 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@craco/craco": "^7.0.0",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
