--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "json-server": "json-server --watch __json-server-mock__/db.json -p 3001 -m __json-server-mock__/middleware.js"
+    "json-server": "json-server --watch __json-server-mock__/db.json -p 3001 -m __json-server-mock__/middleware.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -r git@github.com:RionZZZ/rion.github.io.git -b main"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +63,7 @@
     "@types/react-beautiful-dnd": "^13.1.4",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "eslint-config-prettier": "^8.6.0",
+    "gh-pages": "^6.0.0",
     "husky": "^8.0.3",
     "json-server": "^0.17.1",
     "lint-staged": "^13.1.0",
