--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@craco/craco": "^7.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "eslint-config-prettier": "^8.6.0",
@@ -67,6 +68,7 @@
     "husky": "^8.0.3",
     "json-server": "^0.17.1",
     "lint-staged": "^13.1.0",
+    "msw": "^1.2.5",
     "prettier": "2.8.3"
   },
   "lint-staged": {
